<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/new_ride"
    tools:context=".NewRide">

    <include layout="@layout/toolbar_with_arrow"
        android:id="@+id/toolbar"></include>

    <TextView
        android:id="@+id/passenger_number_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/passengers_number"
        android:textSize="18dp"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/passenger_number"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:autofillHints="..."
        android:inputType="number"
        android:maxLength="2" />

    <TextView
        android:id="@+id/departure_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/departure_time"
        android:textSize="18dp" />

    <Button
        android:id="@+id/time_set"
        android:layout_width="152dp"
        android:layout_height="49dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/departure_place_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:text="@string/departure_place"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/departure_place"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:autofillHints="..." />

    <Button
        android:layout_width="wrap_content"
        android:id="@+id/add_stop_button"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/add_stop"
        android:onClick="onAddField" />


    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:hint="@string/add_comment" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_check"/>

</LinearLayout>
</ScrollView>